fix corrección tests según relación *-* cli-veh